--- a/index.html
+++ b/index.html
@@ -4,54 +4,205 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css/12bool.css">
-    <link rel="stylesheet" href="style.css/style.css">
+    <link rel="stylesheet" href="css/12bool.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section class="container">
         <h1>esercizio per casa</h1>
         <div class="flex">
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
+            <div class="col-1" >
+                <div class="box">1 col</div>
             </div>
-            <div class="box" >
-                <div class="col-1">1 col</div>
-            </div>    
-            
+            <div class="col-1" >
+                <div class="box">1 col</div>
+            </div>            
         </div>
         <div class="flex">
-            <div class="box">
-                <div class="col-2">col</div>
+            <div class="col-2">
+                <div class="box">col</div>
+            </div>
+            <div class="col-5">
+                <div class="box">col</div>
+            </div>
+            <div class="col-5">
+                <div class="box">col</div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-12">
+                <div class="box">col</div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-8">
+                <div class="box">col</div>
+            </div>
+            <div class="col-2">
+                <div class="box">col</div>
+            </div>
+            <div class="col-2">
+                <div class="box">col</div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-1">
+                <div class="box">1</div>
+            </div>
+            <div class="col-2">
+                <div class="box">2</div>
+            </div>
+            <div class="col-2">
+                <div class="box">2</div>
+            </div>
+            <div class="col-6">
+                <div class="box">6</div>
+            </div>
+            <div class="col-1">
+                <div class="box">1</div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-6">
+                <div class="box">
+                    <div class="flex">
+                        <div class="col-2">
+                            <div class="int-box">c</div>
+                        </div>
+                        <div class="col-2">
+                            <div class="int-box">c</div>
+                        </div>
+                        <div class="col-8">
+                            <div class="int-box">c</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="box">
+                    <div class="flex">
+                        <div class="col-6">
+                            <div class="int-box">c</div>
+                        </div>
+                        <div class="col-6">
+                            <div class="int-box">c</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>dopo</div>
+        <div class="flex">
+            <div class="col-1">
+                <div class="box">1</div>
+            </div>
+            <div class="col-11">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-2">
+                <div class="box">1</div>
+            </div>
+            <div class="col-10">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-3">
+                <div class="box">1</div>
+            </div>
+            <div class="col-9">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-4">
+                <div class="box">1</div>
+            </div>
+            <div class="col-8">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-5">
+                <div class="box">1</div>
+            </div>
+            <div class="col-7">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-6">
+                <div class="box">1</div>
+            </div>
+            <div class="col-6">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="col-1 col-offset-11">
+                <div class="box">col</div>
+            </div>
+            <div class="col-2 col-offset-10">
+                <div class="box">col</div>
+            </div>
+            <div class="col-3 col-offset-9">
+                <div class="box">col</div>
+            </div>
+            <div class="col-4 col-offset-8">
+                <div class="box">col</div>
+            </div>
+            <div class="col-5 col-offset-7">
+                <div class="box">col</div>
+            </div>
+            <div class="col-6 col-offset-6">
+                <div class="box">col</div>
+            </div>
+            <div class="col-7 col-offset-5">
+                <div class="box">col</div>
+            </div>
+            <div class="col-8 col-offset-4">
+                <div class="box">col</div>
+            </div>
+            <div class="col-9 col-offset-3">
+                <div class="box">col</div>
+            </div>
+            <div class="col-10 col-offset-2">
+                <div class="box">col</div>
+            </div>
+            <div class="col-11 col-offset-1">
+                <div class="box">col</div>
             </div>
         </div>
     </section>
